[package]
name = "learning-lm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4.3"
tokenizers = "0.19.1"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4", features = ["limit"] }
dashmap = "5.0"  # 并发安全的哈希表 https://docs.rs/dashmap/latest/dashmap/struct.DashMap.html
